Fix DOMMatrix initialization with NaN/NaN

Bug: 721553
Change-Id: I05b94b482104d6375bddcfa4573a657101a031b2
Reviewed-on: https://chromium-review.googlesource.com/552380
Reviewed-by: Jinho Bang <jinho.bang@samsung.com>
Commit-Queue: Fernando Serboncini <fserb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483715}
Former-commit-id: 93432c4ba6fabf0e9a9beececdf05bb34512730a